# goldlapel-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
docs/: wrapper-telemetry-pattern.md
scripts/: test.sh
src/goldlapel/: __init__.py  __main__.py  cache.py  cli.py  counters.py  ddl.py  documents.py  geos.py  hashes.py  proxy.py  queues.py  redis_compat.py  sqlalchemy.py  streams.py  utils.py  wrap.py  zsets.py
src/goldlapel/asyncio/: __init__.py  _counters.py  _documents.py  _geos.py  _hashes.py  _proxy.py  _queues.py  _streams.py  _utils.py  _zsets.py
src/goldlapel/django/: base.py
tests/: _integration_gate.py  test_api_key.py  test_async_parity.py  test_cache.py  test_cli.py  test_counters.py  test_ddl.py  test_django.py  test_doc.py  test_doc_integration.py  test_documents.py  test_geos.py  test_hashes.py  test_instance.py  test_proxy.py  test_queues.py  test_search.py  test_sqlalchemy.py  test_streams.py  test_streams_integration.py  test_v02_asyncio.py  test_v02_asyncio_integration.py  test_v02_factory.py  test_v02_integration.py  test_v02_subprocess_cleanup.py  test_wrap.py  test_zsets.py
