[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goldlapel"
version = "0.0.0"
description = "Self-optimizing Postgres proxy — automatic materialized views and indexes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Stephen Gibson"}]
keywords = ["postgres", "proxy", "optimization", "materialized-views", "database"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://goldlapel.com"
Repository = "https://github.com/goldlapel/goldlapel-python"

[project.scripts]
goldlapel = "goldlapel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
goldlapel = ["bin/*"]
