[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "goldlapel"
version = "0.0.0"
description = "Self-optimizing Postgres proxy — automatic materialized views and indexes"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "THIRD-PARTY-NOTICES.md"]
requires-python = ">=3.9"
authors = [{name = "The Waiter of Gold Lapel", email = "thewaiter@goldlapel.com"}]
keywords = ["postgres", "proxy", "optimization", "materialized-views", "database", "cache", "redis-compat", "mongo-compat", "query-optimization"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.optional-dependencies]
# Contributor-only. Everyone who clones the repo installs `[dev]` to run the
# test suite. Not customer-facing — customers just `pip install goldlapel`.
dev = [
    "pytest",
    "pytest-asyncio",
    "django",
    "sqlalchemy",
    "psycopg2-binary",
    "psycopg[binary]",
    "asyncpg",
]

[project.urls]
Homepage = "https://goldlapel.com"
Documentation = "https://goldlapel.com/docs/python"
Repository = "https://github.com/goldlapel/goldlapel-python"
Issues = "https://github.com/goldlapel/goldlapel-python/issues"

[project.scripts]
goldlapel = "goldlapel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
goldlapel = ["bin/*"]
